<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plotter</name>
  <version>0.0.1</version>
  <description>Real-time plotter for F1TENTH data visualization</description>
  <maintainer email="hugoc@email.com">Hugo C</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
